Updated required fields and added a Disabled binding to the +Add button on dialogAddEmployeeorAdmin modal to make sure user can't add "blank" entries. Updated error message popup text. Files modified - [MunicipalityUsers.variables.json,MunicipalityUsers.html,ForgotPassword.html,pages-config.json]

--- a/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
+++ b/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
@@ -12,10 +12,10 @@
                 <wm-gridrow name="gridrow2">
                     <wm-gridcolumn columnwidth="3" name="gridcolumn3"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn4">
-                        <wm-text name="Email" type="email" required="true" placeholder="Your Registered Email"></wm-text>
+                        <wm-text name="Email" type="email" required="true" placeholder="Enter your Username (Email Address)"></wm-text>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="3" name="gridcolumn6">
-                        <wm-button class="btn-default" caption="Reset Password" type="button" margin="unset 0.5em" name="button1" on-click="Variables.getUserID.invoke()"></wm-button>
+                        <wm-button class="btn-primary" caption="Reset Password" type="button" margin="unset 0.5em" name="button1" on-click="Variables.getUserID.invoke()" iconclass="wi wi-update"></wm-button>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow3" padding="2em unset">
