--- a/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
+++ b/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
@@ -49,9 +49,9 @@
                                                 <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                 <wm-grid-action key="customButton" display-name="Add Employee" show="true" class="btn-primary" iconclass="wi wi-person-add" title="Add Employee" action="customButtonAction($event);Widgets.dialogAddEmployeeORAdmin.open()"
                                                 shortcutkey="" disabled="false" icon="wi wi-plus"></wm-grid-action>
-                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Variables.DeleteEmployee.invoke()" disabled="false"></wm-grid-row-action>
                                                 <wm-grid-row-action key="customRow1" display-name="" show="true" class="btn-transparent" iconclass="wi wi-people" title="Manage Groups" action="customRow1Action($event);Variables.StateInformation.listRecords();Widgets.EmployeeDialog.open()"
                                                 disabled="false"></wm-grid-row-action>
+                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Variables.DeleteEmployee.invoke()" disabled="false"></wm-grid-row-action>
                                             </wm-grid>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
@@ -71,8 +71,8 @@
                                                 <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                 <wm-grid-action key="customButton" display-name="Add Admin" show="true" class="btn-primary" iconclass="wi wi-person-add" title="Add Admin" action="Widgets.dialogAddEmployeeORAdmin.open();customButtonAction2($event)"
                                                 shortcutkey="" disabled="false" icon="wi wi-plus"></wm-grid-action>
-                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Variables.DeleteAdmin.invoke()" disabled="false"></wm-grid-row-action>
                                                 <wm-grid-row-action key="customRow1" display-name="" show="true" class="btn-transparent" iconclass="wi wi-people" title="Manage Groups" action="customRow1Action2($event)" disabled="false"></wm-grid-row-action>
+                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Variables.DeleteAdmin.invoke()" disabled="false"></wm-grid-row-action>
                                             </wm-grid>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
@@ -86,21 +86,22 @@
                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
                                         <wm-grid-action key="addNewRow" display-name="New Group" show="true" class="btn-primary" iconclass="wi wi-people" title="New Group" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                         <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
-                                        <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                         <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-people" title="Manage Users" action="Widgets.GroupMembersData.open()" disabled="false"></wm-grid-row-action>
+                                        <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                     </wm-grid>
                                     <wm-liveform novalidate="false" errormessage="" title="Group Details" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.GetMunicipalityGroups.dataSet" captionalign="left" captionposition="top" name="liveform1"
                                     on-error="liveform1Error($event, $operation, $data)" on-success="liveform1Success($event, $operation, $data)">
                                         <wm-layoutgrid columns="1" name="layoutgrid7">
                                             <wm-gridrow name="gridrow20_1">
                                                 <wm-gridcolumn columnwidth="12" name="gridcolumn32_1">
-                                                    <wm-form-field name="groupName" displayname="Group Name" show="true" primary-key="false" generator="assigned" key="groupName" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                                    <wm-form-field name="groupName" displayname="Group Name" show="true" primary-key="false" generator="assigned" key="groupName" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
+                                                    required="true"></wm-form-field>
                                                 </wm-gridcolumn>
                                             </wm-gridrow>
                                             <wm-gridrow name="gridrow21">
                                                 <wm-gridcolumn columnwidth="12" name="gridcolumn33_1">
                                                     <wm-form-field name="groupDescription" displayname="Group Description" show="true" primary-key="false" generator="assigned" key="groupDescription" type="string" widget="text" maxchars="255" inputtype="text"
-                                                    placeholder="Enter value"></wm-form-field>
+                                                    placeholder="Enter value" required="true"></wm-form-field>
                                                 </wm-gridcolumn>
                                             </wm-gridrow>
                                         </wm-layoutgrid>
@@ -186,15 +187,15 @@
     <wm-view class="dialog-view" name="view2">
         <wm-dialog dialogtype="design-dialog" modal="true" title="bind:&quot;Add &quot;+Variables.AdminOrEmp.dataSet.dataValue" iconclass="wi wi-person-add" name="dialogAddEmployeeORAdmin">
             <wm-dialogactions name="dialogactions2">
-                <wm-button class="btn-primary" caption="Add" name="buttonRole" on-click="buttonRoleClick($event, $scope)" iconclass="wi wi-add"></wm-button>
+                <wm-button class="btn-primary" caption="Add" name="buttonRole" on-click="buttonRoleClick($event, $scope)" iconclass="wi wi-add" disabled="bind:Widgets.textSelectUser.datavalue == null"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button4" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
             <wm-layoutgrid name="layoutgrid6">
                 <wm-gridrow name="gridrow18"></wm-gridrow>
                 <wm-gridrow name="gridrow19">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn33" padding="2em unset">
-                        <wm-composite name="composite3" required="false">
-                            <wm-label class="col-md-3 control-label" name="label8786" caption="Select User"></wm-label>
+                        <wm-composite name="composite3" required="true">
+                            <wm-label class="col-md-3 form-control-static" name="label8786" caption="Select User" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container6">
                                 <wm-search name="textSelectUser" dataset="bind:Variables.AllUsers.dataSet" searchkey="email" displaylabel="email" displayimagesrc="photo" datafield="id" placeholder="Search by Email Address"></wm-search>
                             </wm-container>
@@ -203,8 +204,8 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow20">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn35" padding="2em unset">
-                        <wm-composite name="composite4">
-                            <wm-label class="col-md-3 control-label" name="label24" caption="Select Role"></wm-label>
+                        <wm-composite name="composite4" show="true" required="true">
+                            <wm-label class="col-md-3 form-control-static" name="label24" caption="Select Role" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container7">
                                 <wm-select name="textSelectRole" datavalue="bind:Variables.AdminOrEmp.dataSet.dataValue" dataset="MunicipalityEmployee,MunicipalityAdmin"></wm-select>
                             </wm-container>
@@ -237,7 +238,8 @@
                 <wm-button class="btn-primary" caption="Add" name="button8" on-click="Variables.MunicipalityGroupMembersData.createRecord()" disabled="bind:Widgets.searchUsers.datavalue.UserId == null" iconclass="wi wi-add"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button7" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
-            <wm-search name="searchUsers" placeholder="Search by Email Address" dataset="bind:Variables.getListOfUsers.dataSet" searchkey="Email" displaylabel="Email" datafield="All Fields" orderby="Email:desc" on-focus="Variables.getListOfUsers.invoke()"></wm-search>
+            <wm-search name="searchUsers" placeholder="Search by Email Address" dataset="bind:Variables.getListOfUsers.dataSet" searchkey="Email" displaylabel="Email" datafield="All Fields" orderby="Email:desc" on-focus="Variables.getListOfUsers.invoke()"
+            required="true"></wm-search>
         </wm-dialog>
     </wm-view>
     <wm-view class="dialog-view" name="view6_1">
@@ -320,8 +322,8 @@
         <wm-dialog dialogtype="design-dialog" modal="true" title="Add User to Group" iconclass="wi wi-people" name="AddGroupstoMembers">
             <wm-form errormessage="" captionposition="top" class="app-dialog-form" name="form1">
                 <wm-composite name="composite4_1">
-                    <wm-form-field displayname="Municipality User Groups" widget="select" show="true" type="custom" name="addGroupMembersSelect" dataset="bind:Variables.MunicipalityGroups.dataSet" datafield="All Fields" displayfield="groupName" placeholder="Select Group Members"
-                    defaultvalue="bind:Variables.GetMunicipalityGroups.firstRecord.groupName"></wm-form-field>
+                    <wm-form-field displayname="Municipality User Groups" widget="select" show="true" type="custom" name="addGroupMembersSelect" dataset="bind:Variables.MunicipalityGroups.dataSet" datafield="All Fields" displayfield="groupName" placeholder="Select Group"
+                    defaultvalue="bind:Variables.GetMunicipalityGroups.firstRecord.groupName" required="true"></wm-form-field>
                 </wm-composite>
             </wm-form>
             <wm-dialogactions name="dialogactions5">
