liveform/dialog/modal- disabled "submit" button until user selects municipality with bind, to prevent "blank" submissions Files modified - [CompanyMunicipalities.html]

--- a/src/main/webapp/pages/CompanyMunicipalities/CompanyMunicipalities.html
+++ b/src/main/webapp/pages/CompanyMunicipalities/CompanyMunicipalities.html
@@ -53,8 +53,8 @@
                                 defaultvalue="Pending"></wm-form-field>
                                 <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number"
                                 placeholder=""></wm-form-field>
-                                <wm-form-action key="save" display-name="Submit" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" action="saveAction($event);saveAction1($event)" disabled="false" type="button"
-                                update-mode="true"></wm-form-action>
+                                <wm-form-action key="save" display-name="Submit" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" action="saveAction($event);saveAction1($event)" disabled="bind:Widgets.municipalities.datavalue == null"
+                                type="button" update-mode="true"></wm-form-action>
                                 <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
                             </wm-liveform>
                         </wm-livegrid>
