Cleaned up column labels, updated View icons, removed placeholder text from MyProfile Files modified - [MyProfile.html,UserClosedForms.html,UserOpenForms.html]

--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -33,43 +33,43 @@
                                         <wm-composite name="composite1" width="100%" margin="2% unset unset unset">
                                             <wm-label class="col-md-3 control-label" name="label21" caption="First Name"></wm-label>
                                             <wm-container class="col-md-9" name="container1">
-                                                <wm-text name="textfn" datavalue="bind:Variables.CurrentUserDetails.dataSet.firstName"></wm-text>
+                                                <wm-text name="textfn" datavalue="bind:Variables.CurrentUserDetails.dataSet.firstName" placeholder=""></wm-text>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="100%" margin="2% unset unset unset" name="composite2">
                                             <wm-label class="col-md-3 control-label" name="label22" caption="Last Name"></wm-label>
                                             <wm-container class="col-md-9" name="container2">
-                                                <wm-text name="textln" datavalue="bind:Variables.CurrentUserDetails.dataSet.lastName"></wm-text>
+                                                <wm-text name="textln" datavalue="bind:Variables.CurrentUserDetails.dataSet.lastName" placeholder=""></wm-text>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="100%" margin="2% unset unset unset" name="composite4">
                                             <wm-label class="col-md-3 control-label" name="label24" caption="Email"></wm-label>
                                             <wm-container class="col-md-9" name="container4">
-                                                <wm-text name="textem" datavalue="bind:Variables.CurrentUserDetails.dataSet.email"></wm-text>
+                                                <wm-text name="textem" datavalue="bind:Variables.CurrentUserDetails.dataSet.email" placeholder=""></wm-text>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="100%" margin="2% unset unset unset" name="composite5">
                                             <wm-label class="col-md-3 control-label" name="label25" caption="Phone"></wm-label>
                                             <wm-container class="col-md-9" name="container5">
-                                                <wm-text name="textph" datavalue="bind:Variables.CurrentUserDetails.dataSet.phoneNumber"></wm-text>
+                                                <wm-text name="textph" datavalue="bind:Variables.CurrentUserDetails.dataSet.phoneNumber" placeholder=""></wm-text>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="100%" margin="2% unset unset unset" name="composite6">
                                             <wm-label class="col-md-3 control-label" name="label26" caption="Address1"></wm-label>
                                             <wm-container class="col-md-9" name="container6">
-                                                <wm-text name="textad1" datavalue="bind:Variables.CurrentUserDetails.dataSet.address1"></wm-text>
+                                                <wm-text name="textad1" datavalue="bind:Variables.CurrentUserDetails.dataSet.address1" placeholder=""></wm-text>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="100%" margin="2% unset unset unset" name="composite7">
                                             <wm-label class="col-md-3 control-label" name="label27" caption="Address2"></wm-label>
                                             <wm-container class="col-md-9" name="container7">
-                                                <wm-text name="textad2" datavalue="bind:Variables.CurrentUserDetails.dataSet.address2"></wm-text>
+                                                <wm-text name="textad2" datavalue="bind:Variables.CurrentUserDetails.dataSet.address2" placeholder=""></wm-text>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="100%" margin="2% unset unset unset" name="composite7">
                                             <wm-label class="col-md-3 control-label" name="label27" caption="City"></wm-label>
                                             <wm-container class="col-md-9" name="container7">
-                                                <wm-text name="textct" datavalue="bind:Variables.CurrentUserDetails.dataSet.city"></wm-text>
+                                                <wm-text name="textct" datavalue="bind:Variables.CurrentUserDetails.dataSet.city" placeholder=""></wm-text>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="100%" margin="2% unset unset unset" name="composite7">
@@ -82,13 +82,13 @@
                                         <wm-composite width="100%" margin="2% unset" name="composite8">
                                             <wm-label class="col-md-3 control-label" name="label28" caption="Postal Code"></wm-label>
                                             <wm-container class="col-md-9" name="container8">
-                                                <wm-text name="textpc" datavalue="bind:Variables.CurrentUserDetails.dataSet.postalCode"></wm-text>
+                                                <wm-text name="textpc" datavalue="bind:Variables.CurrentUserDetails.dataSet.postalCode" placeholder=""></wm-text>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="100%" margin="2% unset unset unset" name="composite7">
                                             <wm-label class="col-md-3 control-label" name="labe27" caption="Country"></wm-label>
                                             <wm-container class="col-md-9" name="container7">
-                                                <wm-text name="textctry" datavalue="bind:Variables.CurrentUserDetails.dataSet.country"></wm-text>
+                                                <wm-text name="textctry" datavalue="bind:Variables.CurrentUserDetails.dataSet.country" placeholder=""></wm-text>
                                             </wm-container>
                                         </wm-composite>
                                     </wm-gridcolumn>
